--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de receita</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="page">
-
-        <img src="" alt="">
+        <img src="Assets/main-image.jpg" alt="Imagem de um cupcakes com grãos de cage e chantilly">
         <main>
             <div id="about">
                 <h1>Cupcake de café com chantilly</h1>
