Imagem de fundo e style page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="page">
         <img src="Assets/main-image.jpg" alt="Imagem de um cupcakes com grãos de cage e chantilly">
         <main>
-            <div id="about">
+            <section id="about">
                 <h1>Cupcake de café com chantilly</h1>
                 <p>
                     O bolinho perfeito para acompanhar o café de todos os dias. É muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou! 
