--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             <section id="about">
                 <h1>Cupcake de café com chantilly</h1>
                 <p>
-                    O bolinho perfeito para acompanhar o café de todos os dias. É muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou! 
+                    O DIOGINGO perfeito para acompanhar o café de todos os dias. É muito fácil e ainda por cima fica maravilhosoo DIOGINHO, com certeza vai impressionar. Faz e depois me conta o que achou! 
+                </p>
+                <p>
+                    Tempo: 1h10 <br>
+                    Rendimento: 12 porções <br>
+                    Dificuldade: fácil
                 </p>
                 <h2>Ingredientes</h2>
                 <ul>
@@ -44,14 +49,11 @@
                    Para a montagem, faça um furo no centro dos cupcakes e recheie com o brigadeiro de café reservado. Decore as superfícies dos cupcakes com o chantilly reservado, fazendo círculos. Decore com grãos de café e leve à geladeira até o momento de servir.</P>
             </section>
         </main>
-
-
-
-
-
-
-        
-    </div>
-    
+    </div>   
+    <Footer>
+        Feito com
+        <img src="Assets/ph_heart-fill.svg" alt="Coração emoticon"> 
+        pela Rocketseat
+    </Footer>    
 </body>
 </html>
